@@ -9,8 +9,8 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -58,6 +58,7 @@
 			<artifactId>junit-jupiter-api</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
@@ -82,6 +83,17 @@
 			<version>6.6.1.202309021850-r</version>
 		</dependency>
 
+		<!-- Langchain4j dependencies group -->
+		<dependency>
+			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j-ollama</artifactId>
+			<version>0.36.1</version>
+		</dependency>
+		<dependency>
+			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j-jlama</artifactId>
+			<version>0.36.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -129,14 +141,28 @@
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>2.18.0</version>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<forkCount>1</forkCount>
+					<argLine>
+						--add-modules=jdk.incubator.vector
+						--add-exports java.base/sun.nio.ch=ALL-UNNAMED
+						--enable-preview
+						--enable-native-access=ALL-UNNAMED
+						--add-exports java.base/jdk.internal.vm.vector=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
-		</plugins>
+        </plugins>
 	</build>
 </project>
